18051800.out
/home/m.ulloacalzonzin/GW_eta/Eta-Prime-GWs
c0701a-s11.ufhpc
Sun Nov  9 01:49:04 PM EST 2025
/home/m.ulloacalzonzin/GW_eta/Eta-Prime-GWs/Potential2.py:15: SyntaxWarning: invalid escape sequence '\s'
  '''
Traceback (most recent call last):
  File "/home/m.ulloacalzonzin/GW_eta/Eta-Prime-GWs/Plotter.py", line 1, in <module>
    import Potential2
  File "/home/m.ulloacalzonzin/GW_eta/Eta-Prime-GWs/Potential2.py", line 10, in <module>
    import DressedMasses
  File "/home/m.ulloacalzonzin/GW_eta/Eta-Prime-GWs/DressedMasses.py", line 78
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
